# percept

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/aq-cli/: Cargo.toml
crates/aq-cli/src/: main.rs
crates/aq-cli/tests/: cli_nq.rs  cli_signatures.rs
crates/aq-core/: Cargo.toml
crates/aq-core/src/: backend.rs  lib.rs  node.rs
crates/aq-core/src/query/: eval.rs  eval_tests.rs  lexer.rs  lexer_tests.rs  parser.rs  parser_tests.rs
crates/aq-nlp/: Cargo.toml
crates/aq-nlp/scripts/: spacy_parse.py
crates/aq-nlp/src/: backend.rs  coref.rs  discourse.rs  index.rs  lib.rs  markdown.rs  narrative.rs  nq_cache.rs  roles.rs  spacy.rs  tree.rs
crates/aq-nlp/src/corpus/: analysis.rs  coref.rs  merge.rs  mod.rs  renumber.rs
crates/aq-nlp/tests/: contribute_examples.rs  corpus_regression.rs  discourse_e2e.rs  discourse_query_integration.rs  index_integration.rs  interaction_query_integration.rs  query_integration.rs  serialization_roundtrip.rs
crates/aq-nlp/tests/fixtures/apollo13/: part1_launch.txt  part2_transit.txt  part3_accident.txt
crates/aq-nlp/tests/fixtures/genesis37/: part1_dreams.txt  part2_journey.txt  part3_betrayal.txt
crates/aq-treesitter/: Cargo.toml
crates/aq-treesitter/src/: backend.rs  langs.rs  lib.rs  parse.rs
crates/aq-treesitter/tests/: integration.rs
crates/gq/: Cargo.toml
crates/gq/src/: lib.rs  main.rs
crates/gq/tests/: integration.rs  test_gq.sh
crates/lq-cli/: Cargo.toml
crates/lq-cli/src/: main.rs
crates/lq-cli/tests/: integration.rs
crates/lq-cli/tests/fixtures/: sample.bracket  sample.json  sample.logfmt
crates/lq-core/: Cargo.toml
crates/lq-core/src/: drain.rs  filter.rs  lib.rs  pipeline.rs
crates/lq-parse/: Cargo.toml
crates/lq-parse/src/: access_log.rs  ansi.rs  bracket.rs  build_tool.rs  detect.rs  docker_cri.rs  json.rs  lib.rs  logfmt.rs  model.rs  syslog.rs
crates/mq-cli/: Cargo.toml
crates/mq-cli/src/: commands.rs  main.rs
crates/mq-cli/tests/: cli_tests.rs
crates/mq-embed/: Cargo.toml
crates/mq-embed/src/: engine.rs  lib.rs  model.rs
crates/mq-embed/tests/: embedding_tests.rs
crates/mq-store/: Cargo.toml
crates/mq-store/src/: collection.rs  lib.rs  similarity.rs
crates/oq/: Cargo.toml
crates/oq/src/: lib.rs  main.rs
crates/oq/tests/: integration.rs
crates/tq-cli/: Cargo.toml
crates/tq-cli/src/: main.rs
crates/tq-cli/tests/: integration.rs
crates/tq-cli/tests/fixtures/: cargo-test.json  cargo-test.txt  flutter.txt  gotest.json  gotest.txt  jest.txt  junit.xml  pytest.txt  tap.txt
crates/tq-core/: Cargo.toml
crates/tq-core/src/: diff.rs  flaky.rs  lib.rs
crates/tq-parse/: Cargo.toml
crates/tq-parse/src/: detect.rs  flutter.rs  gotest.rs  gotest_json.rs  jest.rs  junit.rs  lib.rs  libtest.rs  libtest_json.rs  model.rs  pytest.rs  tap.rs
tools/: cq  test_cq.sh
