[package]
name = "mq-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector storage and similarity search for mq"

[dependencies]
mq-embed = { path = "../mq-embed" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
