[package]
name = "tq-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tq"
path = "src/main.rs"

[dependencies]
tq-parse = { path = "../tq-parse" }
tq-core = { path = "../tq-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
